--- a/workflows/scrape.yml
+++ b/workflows/scrape.yml
@@ -2,12 +2,13 @@ name: Atualizar Tabela Legislativa
 
 on:
   schedule:
-    - cron: '0 9 * * *'  # roda todos os dias às 9h UTC (6h no Brasil)
-  workflow_dispatch:  # permite rodar manualmente pelo botão "Run workflow"
+    - cron: '0 9 * * *'  # Roda todos os dias às 9h UTC (6h no Brasil)
+  workflow_dispatch:  # Permite execução manual
 
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
+
     steps:
       - name: Clonar repositório
         uses: actions/checkout@v3
@@ -18,18 +19,23 @@ jobs:
           python-version: '3.10'
 
       - name: Instalar dependências
-        run: pip install -r requirements.txt
+        run: pip install -r scraper-fabricio/requirements.txt
 
       - name: Executar scraper
-        run: python scraper.py
+        run: python scraper-fabricio/scraper.py
 
-      - name: Commit das mudanças
+      - name: Verificar alterações
+        run: git diff
+
+      - name: Commit e push se houver mudanças
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'actions@github.com'
-          git add .
-          git commit -m "Atualização automática da tabela legislativa" || echo "Nada para commitar"
-          git push
 
-          #Teste funcionamento
-        
+          if [[ `git status --porcelain` ]]; then
+            git add .
+            git commit -m "Atualização automática da tabela legislativa"
+            git push
+          else
+            echo "Nenhuma alteração detectada, nada para commitar."
+          fi
